Update project to support building with JDK11
Build changes:

* Update all build plugins to latest to best ensure JDK11 support
* Update minimum Maven version to support all updated plugins
* Update jruby dependency to support running on JDK11 (fixes test)
* Add -Djava.locale.providers=COMPAT to force the use of JDK8-locale
  parsing behavior for DateTimeFormatter (fixes test)
* Update enforcer plugin to check java version for fast failure if
  building using an inadequate java version
* Enable javadoc doclint flag (and fix all broken javadocs)
* Remove redundant execution of maven-jar-plugin
* Add explicit 'org.apache.maven.plugins' for an missing groupIds
* Remove redundant declaration of versions plugin from pluginManagement
* Add explicit id for all plugin executions configured in the pom
* Add compiler release flag in a profile that is automatically activated
  when building with a JDK that supports it (not necessary to put this in
  a profile if the enforcer plugin guaranteed that the JDK being used to
  build is 11 or later, which might be good to do in future)
* Add compiler release flag to the eclipse profile to trigger compiler
  compliance settings automatically in newer versions of Eclipse

Dependency changes:

* Update jackson to latest (which fixes multiple CVEs in that dep)
* Updated the mockito test dependency to the latest
* Opportunistically updated slf4j and logback to latest bugfix version
  since updating these is extremely low risk and required no code changes

Miscellaneous changes:

* Fix some warnings about using class.newInstance() unsafely and
  catch ReflectiveOperationException where appropriate
* As already stated above, fixed numerous broken javadocs (enforced by
  enabling doclint settings for the javadoc plugin)
* Replace tab characters with spaces in emissary.css and index.html for
  consistency
* Fix custom class loader in EmissaryIsolatedClassloaderRunner to remove
  the assumption (which is false in JDK11) that the system class l